[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-core"
version = "0.1.0"
description = "Core domain models, contracts, config and spec validation for PyFarm"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pydantic~=2.13.4",
    "pyyaml>=6",
    "loguru~=0.7.3",
    "omegaconf~=2.3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
